--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
                     от
                     «Гражданина Кейна» до «Матрицы».</p>
             </div>
+            <div class="firstimages">
             <img class="img1" src="img/first.png" alt="img">
+            <img src="img/Ellipse2.png" alt="ellipse2" class="ellipse2">
+            </div>
         </div>
         <div class="second">
+            <div class="secondimages">
             <img class="img2" src="img/second.png" alt="img">
+            <img src="img/Ellipse3.png" alt="ellipse3" class="ellipse3">
+            </div>
             <div class="text">
                 <div class="margin">
                     <p class="paragraph">8 занятий</p>
